# pkg/model/parameter/parameter_gen.go
@@ -1,0 +1,132 @@
+// Code generated by tools/gen. DO NOT EDIT.
+
+package parameter
+
+import (
+	"fmt"
+
+	"github.com/google/uuid"
+	"go.emeland.io/modelsrv/pkg/events"
+	"go.emeland.io/modelsrv/pkg/model/annotations"
+)
+
+// ensure Parameter interface is implemented correctly
+var _ Parameter = (*parameterData)(nil)
+
+// ensure events.EventSink interface is implemented correctly
+var _ events.EventSink = (*parameterData)(nil)
+
+type Parameter interface {
+	GetParameterId() uuid.UUID
+	GetResourceId() uuid.UUID
+	GetResourceName() string
+
+	GetDisplayName() string
+	SetDisplayName(string)
+
+	GetValues() []string
+	SetValues([]string)
+
+	GetAnnotations() annotations.Annotations
+	SetAnnotations(annotations.Annotations)
+
+	Register(sink events.EventSink)
+}
+
+type parameterData struct {
+	sink         events.EventSink
+	isRegistered bool
+
+	ParameterId uuid.UUID
+	DisplayName string
+	Values      []string
+	Annotations annotations.Annotations
+}
+
+// NewParameter constructs an unregistered resource; call [Parameter.Register] after adding to the model.
+func NewParameter(id uuid.UUID) Parameter {
+	retval := &parameterData{
+		isRegistered: false,
+		ParameterId:  id,
+	}
+
+	retval.Annotations = annotations.NewAnnotations(retval)
+
+	return retval
+}
+
+// GetParameterId implements [Parameter].
+func (o *parameterData) GetParameterId() uuid.UUID {
+	return o.ParameterId
+}
+
+// GetResourceId implements the hasIdAndName interface.
+func (o *parameterData) GetResourceId() uuid.UUID {
+	return o.ParameterId
+}
+
+// GetResourceName implements the hasIdAndName interface.
+func (o *parameterData) GetResourceName() string {
+	return o.DisplayName
+}
+
+// GetDisplayName implements [DisplayName].
+func (o *parameterData) GetDisplayName() string {
+	return o.DisplayName
+}
+
+// SetDisplayName implements [Parameter].
+func (o *parameterData) SetDisplayName(val string) {
+	o.DisplayName = val
+
+	if o.isRegistered {
+		o.sink.Receive(events.ParameterResource, events.UpdateOperation, o.ParameterId, o)
+	}
+}
+
+// GetValues implements [Values].
+func (o *parameterData) GetValues() []string {
+	return o.Values
+}
+
+// SetValues implements [Parameter].
+func (o *parameterData) SetValues(val []string) {
+	o.Values = val
+
+	if o.isRegistered {
+		o.sink.Receive(events.ParameterResource, events.UpdateOperation, o.ParameterId, o)
+	}
+}
+
+// GetAnnotations implements [Annotations].
+func (o *parameterData) GetAnnotations() annotations.Annotations {
+	return o.Annotations
+}
+
+// SetAnnotations implements [Parameter].
+func (o *parameterData) SetAnnotations(val annotations.Annotations) {
+	o.Annotations = val
+
+	if o.isRegistered {
+		o.sink.Receive(events.ParameterResource, events.UpdateOperation, o.ParameterId, o)
+	}
+}
+
+// Register implements [Parameter].
+func (o *parameterData) Register(sink events.EventSink) {
+	o.sink = sink
+	o.isRegistered = true
+}
+
+// Receive implements [events.EventSink].
+func (o *parameterData) Receive(resType events.ResourceType, op events.Operation, resourceId uuid.UUID, object ...any) error {
+	if resType != events.AnnotationsResource {
+		return fmt.Errorf("unsupported resource type %v in Parameter event sink. Only Annotations are supported", resType)
+	}
+
+	if o.isRegistered {
+		return o.sink.Receive(events.ParameterResource, events.UpdateOperation, o.ParameterId, o)
+	}
+
+	return nil
+}
